# Chat

./: .gitignore
back/: pyproject.toml
back/src/: config.py  main.py
back/src/app/chat/: connection_manager.py  schema.py
back/src/app/chat/api_v1/: router.py
back/src/app/fast_register/: schema.py
back/src/app/fast_register/api_v1/: router.py
back/src/bot/: bot.py  config.py  handlers.py  operation.py
back/src/core/: logger.py  logger_conf.py  operations.py  response.py  validator.py
back/src/rmq/: config.py  consumer.py  publisher.py
front/: index.html  style.sass
front/config/: api.js  cookies.js
front/src/: main.jsx  router.jsx
front/src/components/aside/: MainAside.jsx
front/src/components/aside/style/: main_aside.sass
front/src/components/header/: MainHeader.jsx
front/src/components/header/style/: main_header.sass
front/src/components/section/: About.jsx  ChatRoom.jsx  Message.jsx  SearchUser.jsx  SendMessage.jsx
front/src/components/section/style/: about.sass  chat_room.sass  message.sass  search_user.sass  send_message.sass
front/src/components/ui/btn/: MainBtn.jsx  SearchBtn.jsx  SendMsgBtn.jsx
front/src/components/ui/btn/style/: main-btn.sass  send_msg_btn.sass
front/src/components/ui/input/: MainInput.jsx  MsgTextArea.jsx  SearchInput.jsx
front/src/components/ui/input/style/: main_input.sass  msg_textarea.sass  search_input.sass
front/src/page/: Chat.jsx  Register.jsx
front/src/page/style/: chat.sass  register.sass
