[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["bot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
websockets = "^12.0"
alembic = "^1.13.2"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
