[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["bot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
websockets = "^12.0"
alembic = "^1.13.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
pika-stubs = "^0.1.3"
aio-pika = "^9.4.3"
aiogram = "^3.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
